# reddit-intel

./: .env.example  .gitignore  .mcp.json  AGENTS.md  LICENSE  PIPELINE.md  README.md  ROADMAP.md  SECURITY.md  category_worker.py  check_taxonomy.py  config.json  database.py  dump_scrape.py  extractor.py  ideas.py  ingest.py  llm.py  main.py  mcp_server.py  opportunities.py  promoter.py  pyproject.toml  reddit_scraper.py  requirements.txt  scrape_config.yaml  subreddit_pipeline.py  subriff_scraper.py  taxonomy.yaml
.cursor/rules/: reddit-api-and-structure.mdc
.github/workflows/: ci.yml
db/: __init__.py  categories.py  category_clustering.py  category_events.py  category_retrieval.py  embeddings.py  llm_naming.py  locks.py  opportunity_queries.py  painpoints.py  posts.py  queries.py  relevance.py  schema.sql  seed.py  similarity.py
demo/: __init__.py  analyzer.py  app.py
demo/templates/: base.html  insights.html  landing.html  not_found.html  progress.html
docs/: AGENTIC_EVAL_FIXES.md  DATAFLOW.md  IMPROVEMENTS.md  PAINPOINT_INGEST_PLAN.md  POST_MVP_ROADMAP.md  SIGNAL_SCORING_PLAN.md
evaluation/: README.md  __init__.py
evaluation/agentic_eval/: README.md  __init__.py  compare_runs.py  dump.py  inspect_db.py  metrics.py  run_pipeline.py  snapshot.py
evaluation/agentic_eval/instructions/: 00_protocol.md  20_pending_dedup.md  40_category.md  90_synthesis.md
evaluation/painpoints_eval/: README.md  SEEDING.md  __init__.py  _util.py  cosine_lab.py  mega_merge_stress.py  pair_eval.py  threshold_sweep.py
evaluation/painpoints_eval/fixtures/: .gitkeep  painpoint_merge_pairs.yaml  pending_dedup_pairs.yaml
opportunity_briefs/: AGENTS.md  BRIEF_LAYOUT.md  BRIEF_SPEC.md  README.md  SYNTHESIS_TEMPLATE.md
painpoint_extraction/: __init__.py  bench.py  eval.py  evidence_filter.py  extractor.py  postprocess.py
quality_eval/: README.md  __init__.py  inspect_db.py  run_pipeline.py  snapshot.py
quality_eval/instructions/: 00_protocol.md  10_extraction.md  20_pending_dedup.md  30_pending_merge.md  40_category.md  90_synthesis.md
tests/: test_agentic_eval.py  test_big_sanity.py  test_category_anchor.py  test_creation_gate.py  test_db_integration.py  test_e2e_live.py  test_e2e_real_subreddits.py  test_extraction.py  test_iterative_sweeps.py  test_live_llm_naming.py  test_llm_retry.py  test_mcp_brief.py  test_opportunities.py  test_painpoint_pipeline.py  test_scraper.py  test_sweep_debug.py  test_uncat_llm_review.py
tests/live/: conftest.py  test_e2e_live.py  test_e2e_real_subreddits.py  test_extraction_live.py  test_iterative_sweeps.py  test_live_llm_naming.py  test_multi_sweep.py  test_sweep_debug.py
